# financial-document-intelligence-system

./: .gitignore  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: config.py  dependencies.py  main.py
app/api/: router.py
app/api/v1/: audit.py  auth.py  documents.py  extractions.py  health.py  review.py
app/core/: exceptions.py  logging.py  request_context.py  security.py
app/db/: session.py
app/db/repositories/: audit_log.py  base.py  document.py  extraction.py  review.py
app/models/: __init__.py  audit_log.py  base.py  document.py  extraction.py  pii_mapping.py  review.py
app/pipeline/: context.py  orchestrator.py
app/pipeline/steps/: base.py  step_llm_extract.py  step_ocr.py  step_pii_mask.py  step_risk.py  step_unmask.py  step_validate.py
app/schemas/: audit.py  document.py  extraction.py  extraction_response.py  ocr.py  pii.py  review.py  risk.py  user.py  validation.py
app/services/: storage.py
app/services/audit/: logger.py
app/services/auth/: user_service.py
app/services/llm/: base.py  client.py  extractor.py  ollama_client.py  output_parser.py
app/services/ocr/: base.py  doctr_service.py  pdfplumber_service.py  router.py  tesseract_service.py
app/services/pii/: crypto.py  masker.py  recognizers.py  unmasker.py
app/services/risk/: detector.py
app/tasks/: celery_app.py  document_tasks.py
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.worker
docker/postgres/: init.sql
requirements/: base.txt  dev.txt  prod.txt
(+12 files in other folders)
